[gd_scene load_steps=10 format=3 uid="uid://cxf63ryviy26q"]

[ext_resource type="Script" path="res://main.gd" id="1_qv6hh"]
[ext_resource type="Script" path="res://octtreeref.gd" id="2_ikyeq"]
[ext_resource type="Script" path="res://camera_3d.gd" id="3_dea16"]
[ext_resource type="Script" path="res://panel.gd" id="4_iocfw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_muv7f"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_6lxqx"]
sky_material = SubResource("ProceduralSkyMaterial_muv7f")

[sub_resource type="Environment" id="Environment_pk1lf"]
background_mode = 2
sky = SubResource("Sky_6lxqx")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ibit5"]
transparency = 4
shading_mode = 2
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="ArrayMesh_ecfjp"]

[node name="main" type="Node3D"]
script = ExtResource("1_qv6hh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pk1lf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="thing" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ibit5")
mesh = SubResource("ArrayMesh_ecfjp")
script = ExtResource("2_ikyeq")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.584958, -0.349172, 0.732054, 0, 0.902585, 0.430511, -0.811064, -0.251831, 0.527974, 0.932, 0.793, 0.744)
script = ExtResource("3_dea16")

[node name="show_options" type="CheckButton" parent="."]
offset_right = 110.0
offset_bottom = 31.0
button_pressed = true
text = "Options"

[node name="panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 33.0
offset_right = 528.0
offset_bottom = 321.0
script = ExtResource("4_iocfw")

[node name="x1" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 9.0
offset_right = 114.0
offset_bottom = 47.0
focus_neighbor_left = NodePath("../y1")
focus_neighbor_right = NodePath("../z1")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.1
prefix = "x:"

[node name="y1" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 122.0
offset_top = 9.0
offset_right = 224.0
offset_bottom = 47.0
focus_neighbor_left = NodePath("../z1")
focus_neighbor_right = NodePath("../x1")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.2
prefix = "y:"

[node name="z1" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 243.0
offset_top = 7.0
offset_right = 345.0
offset_bottom = 45.0
focus_neighbor_left = NodePath("../y1")
focus_neighbor_right = NodePath("../x1")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.3
prefix = "z:"

[node name="copy_position" type="Button" parent="panel"]
layout_mode = 0
offset_left = 360.0
offset_top = 4.0
offset_right = 509.0
offset_bottom = 52.0
text = "← Copy Position"

[node name="x2" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 58.0
offset_right = 108.0
offset_bottom = 96.0
focus_neighbor_left = NodePath("../y2")
focus_neighbor_right = NodePath("../z2")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.7
prefix = "x:"

[node name="y2" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 58.0
offset_right = 222.0
offset_bottom = 96.0
focus_neighbor_left = NodePath("../z2")
focus_neighbor_right = NodePath("../x2")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.8
prefix = "y:"

[node name="z2" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 243.0
offset_top = 60.0
offset_right = 345.0
offset_bottom = 98.0
focus_neighbor_left = NodePath("../y2")
focus_neighbor_right = NodePath("../x2")
focus_mode = 2
max_value = 1.0
step = 0.001
value = 0.9
prefix = "z:"

[node name="copy_position2" type="Button" parent="panel"]
layout_mode = 0
offset_left = 361.0
offset_top = 55.0
offset_right = 510.0
offset_bottom = 103.0
focus_neighbor_top = NodePath("../fill_button")
focus_neighbor_bottom = NodePath("../x1")
focus_next = NodePath("../x1")
focus_previous = NodePath("../fill_button")
text = "← Copy Position"

[node name="fill_button" type="Button" parent="panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 113.0
offset_right = 343.0
offset_bottom = 161.0
focus_neighbor_top = NodePath("../x1")
focus_neighbor_bottom = NodePath("../clear_button")
focus_next = NodePath("../clear_button")
focus_previous = NodePath("../z1")
text = "Fill!"

[node name="clear_button" type="Button" parent="panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 172.0
offset_right = 343.0
offset_bottom = 220.0
focus_neighbor_top = NodePath("../fill_button")
focus_neighbor_bottom = NodePath("../x1")
focus_next = NodePath("../x1")
focus_previous = NodePath("../fill_button")
text = "Clear!"

[node name="reset_button" type="Button" parent="panel"]
layout_mode = 0
offset_left = 352.0
offset_top = 113.0
offset_right = 514.0
offset_bottom = 222.0
focus_neighbor_top = NodePath("../fill_button")
focus_neighbor_bottom = NodePath("../x1")
focus_next = NodePath("../x1")
focus_previous = NodePath("../fill_button")
text = "RESET"

[node name="detail" type="SpinBox" parent="panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 357.0
offset_top = 236.0
offset_right = 517.0
offset_bottom = 280.0
min_value = 1.0
max_value = 12.0
value = 3.0
rounded = true
prefix = "Detail: "

[node name="Label" type="Label" parent="panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 236.0
offset_right = 345.0
offset_bottom = 545.0
text = "Mouse to look X and Y axis.
Hold down then use mouse to look Z axis.
Arrow keys to move X and Z axis.
PageUp and PageDown keys to move Y axis.
Escape to release mouse.
Click to recapture mouse.

I recomend:
- move somewhere
- press copy position
- move somewhere else
- press other copy position
- adjust detail if desired
- press Fill! or Clear!"

[connection signal="toggled" from="show_options" to="panel" method="_on_show_options_toggled"]
[connection signal="pressed" from="panel/copy_position" to="." method="_on_copy_position_pressed"]
[connection signal="pressed" from="panel/copy_position2" to="." method="_on_copy_position_2_pressed"]
[connection signal="pressed" from="panel/fill_button" to="." method="_on_fill_button_pressed"]
[connection signal="pressed" from="panel/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="panel/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="value_changed" from="panel/detail" to="." method="_on_detail_value_changed"]
